--- a/deploy/views/templates/entry.ejs
+++ b/deploy/views/templates/entry.ejs
@@ -1,5 +1,5 @@
 <script type="text/html" id="tmplEntry">
-    <p>ADD YOURSELF</p>
+    <h2>ADD YOURSELF</h2>
 
     <div>
         <form target="upload" enctype="multipart/form-data" method="POST" action="/api/creatives" accept-charset="UTF-8">
