add ga.js lib, GoogleAnalyticsView, update router with page tracking

--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -6,9 +6,9 @@
     <title>RVA Makes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-    
+
     <link rel="stylesheet" href="/css/styles.css"/>
-    
+
     <script src="/components/modernizr/modernizr.js"></script>
 </head>
 <body>
@@ -29,11 +29,22 @@
 <%- include templates/about.ejs %>
 <%- include templates/entry.ejs %>
 
+<div id="tracker"></div>
+
+<script src="//www.google-analytics.com/ga.js" async="true"></script>
 <script src="/components/jquery/jquery.js"></script>
 <script src="/components/jquery/jquery.serializeObject.js"></script>
 <script src="/components/mustache/mustache.js"></script>
 <script src="/components/underscore/underscore.js"></script>
 <script src="/components/backbone/backbone.js"></script>
 <script src="/js/rvamakes.js"></script>
+
+<script>
+(function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
 </body>
 </html>
