--- a/deploy/public/css/styles.css
+++ b/deploy/public/css/styles.css
@@ -677,3 +677,10 @@ you can use the generic selector below, but it's slower:
 .pull-up {
   margin-top: -10px;
 }
+#tracker {
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+}
