made the make item already selected

--- a/deploy/views/partials/header.ejs
+++ b/deploy/views/partials/header.ejs
@@ -6,18 +6,18 @@
             <div class="fob"><span class="rva-arrow-down" aria-hidden="true"></span></div>
         </div>
         <div class="options">
-            <div data-filter="">Makes</div>
-            <div data-filter="designer">Designers</div>
-            <div data-filter="developer">Developers</div>
-            <div data-filter="photographer">Photographers</div>
-            <div data-filter="illustrator">Illustrators</div>
-            <div data-filter="musician">Musicians</div>
-            <div data-filter="writer">Writers</div>
-            <div data-filter="filmmaker">Filmmakers</div>
-            <div data-filter="crafter">Crafters</div>
-            <div data-filter="cook">Cooks</div>
-            <div data-filter="mographer">Mographers</div>
-            <div data-filter="technologist">Technologists</div>
+            <div data-filter="" class="makes selected">Makes</div>
+            <div data-filter="designer" class="designer">Designers</div>
+            <div data-filter="developer" class="developer">Developers</div>
+            <div data-filter="photographer" class="photographer">Photographers</div>
+            <div data-filter="illustrator" class="illustrator">Illustrators</div>
+            <div data-filter="musician" class="musician">Musicians</div>
+            <div data-filter="writer" class="writer">Writers</div>
+            <div data-filter="filmmaker" class="filmmaker">Filmmakers</div>
+            <div data-filter="crafter" class="crafter">Crafters</div>
+            <div data-filter="cook" class="cook">Cooks</div>
+            <div data-filter="mographer" class="mographer">Mographers</div>
+            <div data-filter="technologist" class="technologist">Technologists</div>
         </div>
     </div>
 </header>
