--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -6,39 +6,27 @@
     <title>RVA Makes</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
-
     <link rel="stylesheet" href="/css/styles.css"/>
-
     <script src="/components/modernizr/modernizr.js"></script>
 </head>
 <body>
 <%- include partials/header.ejs %>
-
 <section id="list" class="clearfix"></section>
-
 <section id="show"></section>
-
 <section id="entry"></section>
-
 <section id="about"></section>
-
 <%- include partials/footer.ejs %>
-
 <%- include templates/listItem.ejs %>
 <%- include templates/showItem.ejs %>
 <%- include templates/about.ejs %>
 <%- include templates/entry.ejs %>
-
 <div id="tracker"></div>
-
-<script src="//www.google-analytics.com/ga.js" async="true"></script>
-<script src="/components/jquery/jquery.js"></script>
+<script src="/components/jquery/jquery.min.js"></script>
 <script src="/components/jquery/jquery.serializeObject.js"></script>
-<script src="/components/mustache/mustache.js"></script>
-<script src="/components/underscore/underscore.js"></script>
-<script src="/components/backbone/backbone.js"></script>
+<script src="/components/mustache/mustache.min.js"></script>
+<script src="/components/underscore/underscore-min.js"></script>
+<script src="/components/backbone/backbone-min.js"></script>
 <script src="/js/rvamakes.js"></script>
-
 <script>
 (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
