--- a/deploy/views/index.ejs
+++ b/deploy/views/index.ejs
@@ -21,11 +21,15 @@
 <%- include templates/about.ejs %>
 <%- include templates/entry.ejs %>
 <div id="tracker"></div>
-<script src="/components/jquery/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="/components/jquery/jquery.min.js"><\/script>')</script>
 <script src="/components/jquery/jquery.serializeObject.js"></script>
-<script src="/components/mustache/mustache.min.js"></script>
-<script src="/components/underscore/underscore-min.js"></script>
-<script src="/components/backbone/backbone-min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+<script>window.Mustache || document.write('<script src="/components/mustache/mustache.min.js"><\/script>')</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+<script>window._ || document.write('<script src="/components/underscore/underscore-min.js"><\/script>')</script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+<script>window.Backbone || document.write('<script src="/components/backbone/backbone-min.js"><\/script>')</script>
 <script src="/js/rvamakes.js"></script>
 <script>
 (function() {
